2008-05-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/float.h: added __INFINITY
	* device/lib/_fsadd.c: handle overflows
	* device/lib/_fsmul.c,
	* device/lib/_fsdiv.c: use __INFINITY
	* device/lib/_fseq.c,
	* device/lib/_fsneq.c: handle -0.0
	* sim/ucsim/s51.src/uc89c51r.cc,
	* sim/ucsim/s51.src/uc89c51rcl.h: fixed bug 1385430
	* sim/ucsim/sim.src/hwcl.h: */* confuses VC
	* src/mcs51/gen.c (genSend): fixed bug with --xstack
	* support/regression/ports/mcs51-xstack-auto/spec.mk: print floats
	* support/regression/tests/snprintf.c: test bug with --xstack

2008-05-19  Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c (callFuncByName):
	  Support nested parenthesis in peephole function arguments (#1967300)

2008-05-19 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_emitpLabel,pic16_emitpLabelFORCE):
	  fixed duplicate labels (#1911325)

2008-05-19 Raphael Neider <rneider AT web.de>

	* src/regression/empty.c: suppress warning
	* src/regression/pointer1.c: enabled index_by_pointer()
	* src/regression/inline.c: now works for pic16 as well

	* src/pic16/device.c: include dbuf declarations
	* src/pic16/device.h: removed obsolete prototypes

	* src/pic16/gen.c, src/pic16/gen.h: moved generic pointer tags
	* src/pic16/glue.c: made purely local functions static,
	  (pic16_printGPointerType, pic16_printIvalCharPtr,
	  pic16_printIvalFuncPtr, pic16_printIvalPtr): fixed initialized
	  generic pointers' tags (#1961866)

	* src/pic16/pcode.c (assignValnums): optimize literal assignments

2008-05-19 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: remove uninstall.exe after uninstallation,
	  fixed typo, uninstall include/pic16/pic16devices.txt

2008-05-18 Borut Razem <borut.razem AT siol.net>

	* support/Utils/dbuf_string.[ch]: added dbuf_chomp(),
	  the buffer is null terminated
	* src/device/pic16.c:
	  applied modified patch 1965676: Patch for Win32 16 bit PIC
	* sdcc_vc_in.h: defined YY_NO_UNISTD_H
